# django-knocker

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  cms_helper.py  pyproject.toml  requirements-docs.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: logger.yml  test.yml
changes/: 19.feature  22.feature  35.bugfix
docs/: conf.py  index.rst  installation.rst  usage.rst
knocker/: __init__.py  consumers.py  mixins.py  routing.py  signals.py
knocker/static/js/: knocker.js
tests/: base.py  test_consumers.py  test_models.py
tests/example_app/: models.py  routing.py  urls.py  views.py
tests/example_app/migrations/: 0001_initial.py  0002_auto_20180520_1744.py
tests/example_app/templates/example_app/: post_list.html
