[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:knocker/__init__.py]

[flake8]
exclude = *.egg-info,.git,.settings,.tox
max-line-length = 119

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = knocker
multi_line_output = 5
not_skip = __init__.py
