[bumpversion]
current_version = 0.4.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.?)(?P<release>[a-z]*)(?P<relver>\d*)
serialize =
	{major}.{minor}.{patch}.{release}{relver}
	{major}.{minor}.{patch}
commit = True
tag = True
sign_tags = True
tag_name = {new_version}
message = Release {new_version}

[bumpversion:part:release]
optional_value = gamma
values =
	dev
	a
	b
	rc
	gamma

[bumpversion:file:knocker/__init__.py]

[metadata]
name = django-knocker
version = attr: knocker.__version__
url = https://github.com/nephila/django-knocker
project_urls =
	Documentation = https://django-knocker.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.it
description = Channels-based desktop notification system
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
classifiers =
	License :: OSI Approved :: BSD License
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
	channels>=4,<5
	django-meta>=1.4
setup_requires =
	setuptools
packages = knocker
python_requires = >=3.7
test_suite = cms_helper.run
zip_safe = False

[options.package_data]
* = *.txt, *.rst
knocker = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
